Added AttributeExtensions class.

--- a/RepositoryLibrary/RepositoryLibrary.csproj
+++ b/RepositoryLibrary/RepositoryLibrary.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\AttributeExtensions.cs" />
     <Compile Include="Attributes\ColumnAttribute.cs" />
     <Compile Include="Attributes\DAL_AttributeBase.cs" />
     <Compile Include="Attributes\ParameterAttribute.cs" />
