--- a/RepositoryLibrary.Tests/RepositoryLibrary.Tests.csproj
+++ b/RepositoryLibrary.Tests/RepositoryLibrary.Tests.csproj
@@ -75,6 +75,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AttributeExtensionsTests.cs" />
+    <Compile Include="Models\ColumnFilterTestClass.cs" />
     <Compile Include="Models\TestClass.cs" />
     <Compile Include="RepositoryHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
