Added new class for use in nullable value type tests.

--- a/RepositoryLibrary.Tests/RepositoryLibrary.Tests.csproj
+++ b/RepositoryLibrary.Tests/RepositoryLibrary.Tests.csproj
@@ -76,6 +76,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AttributeExtensionsTests.cs" />
+    <Compile Include="Models\ClassWithNullableTypes.cs" />
     <Compile Include="Models\ColumnFilterTestClass.cs" />
     <Compile Include="Models\TestClass.cs" />
     <Compile Include="RepositoryHelperTests.cs" />
